Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -69,16 +69,16 @@
 
 
 % Modify the title format to include quotes
-\DeclareFieldFormat{title}{\mkbibquote{#1}}
+%\DeclareFieldFormat{title}{\mkbibquote{#1}}
 
 % Disable italics for book titles
-\DeclareFieldFormat[book]{title}{\mkbibquote{#1}}
+%\DeclareFieldFormat[book]{title}{\mkbibquote{#1}}
 
 % Disable italics for article titles
-\DeclareFieldFormat[article]{title}{\mkbibquote{#1}}
+%\DeclareFieldFormat[article]{title}{\mkbibquote{#1}}
 
 % Customize title format for \citetitle
-\DeclareFieldFormat{citetitle}{\mkbibquote{#1}}
+%\DeclareFieldFormat{citetitle}{\mkbibquote{#1}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
