--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -97,7 +97,7 @@ Another solution is using alternative cells: If two patterns have a positive cor
 \subsubsection{Refine \emph{S2}}
 An important task for future work is the empirical improvement of \emph{S2}, which has only been theoretically developed based on identified neuroscientific findings. The current blueprint describing its implementation has to be further refined by conducting experiments.
 
-In the first phase, the integration and evaluation of projection fibres based on shifter circuits \sidecite{anderson_shifter_1987, olshausen_neurobiological_1993} should be done and explored within the proposed framework.
+In the first phase, the integration and evaluation of projection fibres based on shifter circuits \cite{anderson_shifter_1987, olshausen_neurobiological_1993} should be done and explored within the proposed framework.
 Afterwards, different object views should be explored (provided by the medium processing loop). Currently, these views are only used during evaluation, but once \emph{S2} is implemented, they can be crucial in learning to associate different object views to the same prototype, encouraging transformation-invariant mappings.
 
 
