--- a/zotero2.bib
+++ b/zotero2.bib
@@ -1,4 +1,128 @@
 
+@incollection{hu_regenerating_2021,
+	location = {Cham, Switzerland},
+	title = {Regenerating Soft Robots Through Neural Cellular Automata},
+	volume = {12691},
+	isbn = {978-3-030-72811-3},
+	url = {http://link.springer.com/10.1007/978-3-030-72812-0_3},
+	pages = {36--50},
+	booktitle = {Genetic Programming},
+	publisher = {Springer},
+	author = {Horibe, Kazuya and Walker, Kathryn and Risi, Sebastian},
+	editor = {Hu, Ting and Lourenço, Nuno and Medvet, Eric},
+	urldate = {2023-07-03},
+	date = {2021},
+	langid = {english},
+	doi = {10.1007/978-3-030-72812-0_3},
+	note = {Series Title: Lecture Notes in Computer Science},
+}
+
+@book{russell_artificial_2021,
+	location = {Hoboken, {NY}, {USA}},
+	edition = {4th},
+	title = {Artificial intelligence: a modern approach},
+	isbn = {978-0-13-461099-3},
+	shorttitle = {Artificial intelligence},
+	abstract = {"Updated edition of popular textbook on Artificial Intelligence. This edition specific looks at ways of keeping artificial intelligence under control"--},
+	pagetotal = {1152},
+	publisher = {Pearson},
+	author = {Russell, Stuart J. and Norvig, Peter},
+	date = {2021},
+	langid = {english},
+	keywords = {Artificial intelligence},
+}
+
+@book{kowalski_information_1997,
+	location = {New York, {NY}, {USA}},
+	edition = {1st},
+	title = {Information Retrieval Systems},
+	volume = {1},
+	isbn = {978-0-7923-9926-1},
+	url = {http://link.springer.com/10.1007/b102478},
+	pagetotal = {282},
+	publisher = {Springer},
+	author = {Kowalski, Gerald},
+	urldate = {2023-06-29},
+	date = {1997},
+	langid = {english},
+	doi = {10.1007/b102478},
+}
+
+@book{costandi_neuroplasticity_2016,
+	location = {Cambridge, {MA}, {USA}},
+	title = {Neuroplasticity},
+	isbn = {978-0-262-52933-4},
+	pagetotal = {181},
+	publisher = {{MIT} Press},
+	author = {Costandi, Moheb},
+	date = {2016},
+	langid = {english},
+	keywords = {Nervous system, Neural transmission, Neuroplasticity, Physiology},
+}
+
+@article{wagemans_century_2012,
+	title = {A century of Gestalt psychology in visual perception: Conceptual and theoretical foundations.},
+	volume = {138},
+	issn = {0033-2909},
+	url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/a0029334},
+	doi = {10.1037/a0029334},
+	shorttitle = {A century of Gestalt psychology in visual perception},
+	pages = {1218--1252},
+	number = {6},
+	journaltitle = {Psychological Bulletin},
+	shortjournal = {Psychological Bulletin},
+	author = {Wagemans, Johan and Feldman, Jacob and Gepshtein, Sergei and Kimchi, Ruth and Pomerantz, James R. and Van Der Helm, Peter A. and Van Leeuwen, Cees},
+	urldate = {2023-07-05},
+	date = {2012},
+	langid = {english},
+}
+
+@book{hamlyn_psychology_2017,
+	location = {London, England},
+	title = {The Psychology of Perception: A Philosophical Examination of Gestalt Theory and Derivative Theories of Perception},
+	isbn = {978-1-315-47329-1},
+	url = {https://www.taylorfrancis.com/books/9781315473284},
+	shorttitle = {The Psychology of Perception},
+	pagetotal = {130},
+	publisher = {Routledge},
+	author = {Hamlyn, D. W.},
+	urldate = {2023-07-05},
+	date = {2017-03-27},
+	langid = {english},
+	doi = {10.4324/9781315473291},
+}
+
+@article{bertolini_machine_2021,
+	title = {Machine Learning for industrial applications: A comprehensive literature review},
+	volume = {175},
+	issn = {0957-4174},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S095741742100261X},
+	doi = {10.1016/j.eswa.2021.114820},
+	shorttitle = {Machine Learning for industrial applications},
+	pages = {114820--114849},
+	number = {3},
+	journaltitle = {Expert Systems with Applications},
+	shortjournal = {Expert Systems with Applications},
+	author = {Bertolini, Massimo and Mezzogori, Davide and Neroni, Mattia and Zammori, Francesco},
+	urldate = {2023-06-24},
+	date = {2021-08},
+	langid = {english},
+}
+
+@book{kandel_principles_2013,
+	location = {New York, {NY}, {USA}},
+	edition = {5th},
+	title = {Principles of neural science},
+	isbn = {978-0-07-139011-8},
+	abstract = {"The field's definitive work from a Nobel Prize-winning author 900 full-color illustrations Principles of Neural Science, 5e describes our current understanding of how the nerves, brain, and mind function. From molecules to anatomic structures and systems to cognitive function, this comprehensive reference covers all aspects of neuroscience. Widely regarded as the field's cornerstone reference, the fifth edition is highlighted by more than 900 full-color illustrations. The fifth edition has been completely updated to reflect the tremendous amount of new research and development in neuroscience in the last decade. Lead author Eric Kandel was awarded the Nobel Prize in Physiology or Medicine in 2000"--Provided by publisher},
+	pagetotal = {1709},
+	publisher = {{McGraw}-Hill},
+	author = {Kandel, Eric R.},
+	date = {2013},
+	langid = {english},
+	keywords = {Central Nervous System, Mental Processes, Nervous System Diseases, Neuropsychology, physiology},
+}
+
 @article{isomura_experimental_2023,
 	title = {Experimental validation of the free-energy principle with in vitro neural networks},
 	volume = {14},
@@ -349,23 +473,6 @@
 	author = {Waibel, Alexander and Hanazawa, Toshiyuki and Hinton, Geoffrey E. and Shikano, Kiyohiro and Lang, Kevin J.},
 	urldate = {2023-06-27},
 	date = {1989-03},
-}
-
-@article{wagemans_century_2012,
-	title = {A century of Gestalt psychology in visual perception: {II}. Conceptual and theoretical foundations.},
-	volume = {138},
-	issn = {0033-2909},
-	url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/a0029334},
-	doi = {10.1037/a0029334},
-	shorttitle = {A century of Gestalt psychology in visual perception},
-	pages = {1218--1252},
-	number = {6},
-	journaltitle = {Psychological Bulletin},
-	shortjournal = {Psychological Bulletin},
-	author = {Wagemans, Johan and Feldman, Jacob and Gepshtein, Sergei and Kimchi, Ruth and Pomerantz, James R. and Van Der Helm, Peter A. and Van Leeuwen, Cees},
-	urldate = {2023-07-05},
-	date = {2012},
-	langid = {english},
 }
 
 @article{von_der_malsburg_neural_1987,
@@ -2095,23 +2202,6 @@ Publisher: Society for Neuroscience},
 	date = {1987-07-01},
 }
 
-@article{bertolini_machine_2021,
-	title = {Machine Learning for industrial applications: A comprehensive literature review},
-	volume = {175},
-	issn = {0957-4174},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S095741742100261X},
-	doi = {10.1016/j.eswa.2021.114820},
-	shorttitle = {Machine Learning for industrial applications},
-	pages = {114820--114849},
-	issue = {C},
-	journaltitle = {Expert Systems with Applications},
-	shortjournal = {Expert Systems with Applications},
-	author = {Bertolini, Massimo and Mezzogori, Davide and Neroni, Mattia and Zammori, Francesco},
-	urldate = {2023-06-24},
-	date = {2021-08},
-	langid = {english},
-}
-
 @article{bassett_understanding_2011,
 	title = {Understanding complexity in the human brain},
 	volume = {15},
@@ -3301,25 +3391,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	note = {Series Title: Communications in Computer and Information Science},
 }
 
-@incollection{hu_regenerating_2021,
-	location = {Cham, Switzerland},
-	title = {Regenerating Soft Robots Through Neural Cellular Automata},
-	volume = {12691},
-	isbn = {978-3-030-72811-3},
-	url = {http://link.springer.com/10.1007/978-3-030-72812-0_3},
-	series = {Lecture Notes in Computer Science},
-	pages = {36--50},
-	booktitle = {Genetic Programming},
-	publisher = {Springer},
-	author = {Horibe, Kazuya and Walker, Kathryn and Risi, Sebastian},
-	editor = {Hu, Ting and Lourenço, Nuno and Medvet, Eric},
-	urldate = {2023-07-03},
-	date = {2021},
-	langid = {english},
-	doi = {10.1007/978-3-030-72812-0_3},
-	note = {Series Title: Lecture Notes in Computer Science},
-}
-
 @incollection{freeman_representations_1990,
 	location = {Oxford, {NY}, {USA}},
 	title = {Representations: Who needs them?},
@@ -3349,22 +3420,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	date = {1998},
 	langid = {english},
 	doi = {10.1016/B978-012526420-4/50008-2},
-}
-
-@book{russell_artificial_2021,
-	location = {Hoboken, {NY}, {USA}},
-	edition = {4th},
-	title = {Artificial intelligence: a modern approach},
-	isbn = {978-0-13-461099-3},
-	series = {Pearson series in artificial intelligence},
-	shorttitle = {Artificial intelligence},
-	abstract = {"Updated edition of popular textbook on Artificial Intelligence. This edition specific looks at ways of keeping artificial intelligence under control"--},
-	pagetotal = {1152},
-	publisher = {Pearson},
-	author = {Russell, Stuart J. and Norvig, Peter},
-	date = {2021},
-	langid = {english},
-	keywords = {Artificial intelligence},
 }
 
 @book{rosenblatt_principles_1962,
@@ -3473,23 +3528,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	doi = {10.7551/mitpress/9780262514620.001.0001},
 }
 
-@book{kowalski_information_1997,
-	location = {New York, {NY}, {USA}},
-	edition = {1st},
-	title = {Information Retrieval Systems},
-	volume = {1},
-	isbn = {978-0-7923-9926-1},
-	url = {http://link.springer.com/10.1007/b102478},
-	series = {The Information Retrieval Series},
-	pagetotal = {282},
-	publisher = {Springer},
-	author = {Kowalski, Gerald},
-	urldate = {2023-06-29},
-	date = {1997},
-	langid = {english},
-	doi = {10.1007/b102478},
-}
-
 @book{koller_probabilistic_2009,
 	location = {Cambridge, {MA}, {USA}},
 	title = {Probabilistic graphical models: principles and techniques},
@@ -3527,20 +3565,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	keywords = {Gestalt psychology},
 }
 
-@collection{kandel_principles_2013,
-	location = {New York, {NY}, {USA}},
-	edition = {5th},
-	title = {Principles of neural science},
-	isbn = {978-0-07-139011-8},
-	abstract = {"The field's definitive work from a Nobel Prize-winning author 900 full-color illustrations Principles of Neural Science, 5e describes our current understanding of how the nerves, brain, and mind function. From molecules to anatomic structures and systems to cognitive function, this comprehensive reference covers all aspects of neuroscience. Widely regarded as the field's cornerstone reference, the fifth edition is highlighted by more than 900 full-color illustrations. The fifth edition has been completely updated to reflect the tremendous amount of new research and development in neuroscience in the last decade. Lead author Eric Kandel was awarded the Nobel Prize in Physiology or Medicine in 2000"--Provided by publisher},
-	pagetotal = {1709},
-	publisher = {{McGraw}-Hill},
-	editor = {Kandel, Eric R.},
-	date = {2013},
-	langid = {english},
-	keywords = {Central Nervous System, Mental Processes, Nervous System Diseases, Neuropsychology, physiology},
-}
-
 @book{james_principles_1890,
 	location = {New York, {NY}, {USA}},
 	title = {The principles of psychology},
@@ -3569,22 +3593,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	author = {Hebb, Donald O.},
 	date = {1949},
 	langid = {english},
-}
-
-@book{hamlyn_psychology_2017,
-	location = {London, England},
-	title = {The Psychology of Perception: A Philosophical Examination of Gestalt Theory and Derivative Theories of Perception},
-	isbn = {978-1-315-47329-1},
-	url = {https://www.taylorfrancis.com/books/9781315473284},
-	series = {Psychology Library Editions: Perception},
-	shorttitle = {The Psychology of Perception},
-	pagetotal = {130},
-	publisher = {Routledge},
-	author = {Hamlyn, D. W.},
-	urldate = {2023-07-05},
-	date = {2017-03-27},
-	langid = {english},
-	doi = {10.4324/9781315473291},
 }
 
 @book{goodfellow_deep_2016,
@@ -3647,19 +3655,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	date = {2019},
 	langid = {english},
 	keywords = {Handbooks, manuals, etc, Invertebrates, Neurobiology, Physiology},
-}
-
-@book{costandi_neuroplasticity_2016,
-	location = {Cambridge, {MA}, {USA}},
-	title = {Neuroplasticity},
-	isbn = {978-0-262-52933-4},
-	series = {The {MIT} Press essential knowledge series},
-	pagetotal = {181},
-	publisher = {{MIT} Press},
-	author = {Costandi, Moheb},
-	date = {2016},
-	langid = {english},
-	keywords = {Nervous system, Neural transmission, Neuroplasticity, Physiology},
 }
 
 @book{ackerman_discovering_1992,
